--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@types/node": "^18.15.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "bun-types": "latest",
     "eslint": "^8.37.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^3.0.3",
     "sass": "^1.60.0",
     "typescript": "^5.0.0",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
-    "bun-types": "latest",
     "vue-tsc": "^1.2.0"
   },
   "module": "src/index.js"
