--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@tiptap/extension-highlight": "^2.1.11",
+    "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/pm": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
+    "@tiptap/vue-3": "^2.1.11",
     "core-js": "^3.29.0",
     "elysia": "latest",
     "mysql2": "^3.6.1",
