이미지 업로드 페이지 추가 및 디자인 업데이트

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
 }
