--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.6.1",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
+    "sharp": "^0.32.6",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0"
