tsboard 0.1.9 업데이트, 글 작성 영역 초기 버전 완료함

--- a/.env
+++ b/.env
@@ -1,1 +1,29 @@
+#
+# TSBOARD 서버쪽 설정 파일
+# 클라이언트쪽 설정은 vite.config.ts > define > "process.env": {} 영역 참조
+# 
+# 참조1 - 서버쪽 mysqld.sock 파일 경로는 시스템마다 상이하므로 따로 확인 필요 (DB_SOCK_PROD)
+# 참조2 - JWT 키는 반드시 그대로 두지 말고 수정해서 사용 필요 (JWT_SECRET_KEY)
+# 참조3 - 이메일 발송용으로는 구글 GMAIL 권장, 이 때 EMAIL_PASS는 GMAIL APP 패스워드 (EMAIL_PASS)
+# 
+VERSION=0.1.9
+
+RELEASE=dev
+VITE_PORT=3000
 SERVER_PORT=3100
+MAX_FILE_SIZE=20485760
+
+# 데이터베이스 세팅 (각 서버 설정에 맞게 변경 필요)
+DB_HOST=localhost
+DB_USER=dbusername
+DB_PASS=dbpassword
+DB_DATA=tsboard
+DB_SOCK_DEV=
+DB_SOCK_PROD=/run/mysqld/mysqld.sock
+
+# JWT 키 세팅 (외부에 노출되면 안되며, 특문 포함 어렵게 설정 필요)
+JWT_SECRET_KEY=@$_-Ts_board_!JWT!_secret*-&key+
+
+# 이메일 발송에 사용할 주소 지정
+EMAIL_ACCOUNT=sampleadminemailaddr@tsboard.dev
+EMAIL_PASS=pleaseupdatethispassword
