--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@tiptap/extension-code-block-lowlight": "^2.1.12",
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-highlight": "^2.1.11",
     "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/extension-table": "^2.1.12",
+    "@tiptap/extension-table-cell": "^2.1.12",
+    "@tiptap/extension-table-header": "^2.1.12",
+    "@tiptap/extension-table-row": "^2.1.12",
     "@tiptap/extension-text-style": "^2.1.11",
+    "@tiptap/extension-youtube": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
     "@tiptap/vue-3": "^2.1.11",
     "core-js": "^3.29.0",
     "elysia": "latest",
+    "highlight.js": "^11.9.0",
+    "lowlight": "^3.1.0",
     "mysql2": "^3.6.1",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
