--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.1.11",
     "@tiptap/vue-3": "^2.1.11",
     "core-js": "^3.29.0",
+    "crypto-js": "^4.2.0",
     "elysia": "latest",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
+    "@types/crypto-js": "^4.1.3",
     "@types/node": "^20.8.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
