--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # 참조2 - JWT 키는 반드시 그대로 두지 말고 수정해서 사용 필요 (JWT_SECRET_KEY)
 # 참조3 - 이메일 발송용으로는 구글 GMAIL 권장, 이 때 EMAIL_PASS는 GMAIL APP 패스워드 (EMAIL_PASS)
 # 
-VERSION=0.2.1
+VERSION=0.2.2
 
 RELEASE=dev
 SERVER_PORT=3100
@@ -17,10 +17,11 @@ DB_HOST=localhost
 DB_USER=dbusername
 DB_PASS=dbpassword
 DB_DATA=tsboard
+DB_TABLE_PREFIX=tsb
 DB_SOCK_DEV=
 DB_SOCK_PROD=/run/mysqld/mysqld.sock
 
-# JWT 키 세팅 (외부에 노출되면 안되며, 특문 포함 어렵게 설정 필요)
+# JWT 키 세팅 (외부에 노출되면 안되며, 특문 포함 어렵게 다시 수정해주세요)
 JWT_SECRET_KEY=@$_-Ts_board_!JWT!_secret*-&key+
 
 # 이메일 발송에 사용할 주소 지정
