설치 스크립트 및 구글 메일 연동용 .env 업데이트

--- a/.env
+++ b/.env
@@ -24,6 +24,9 @@ DB_SOCK_PROD=/run/mysqld/mysqld.sock
 # JWT 키 세팅 (외부에 노출되면 안되며, 특문 포함 어렵게 다시 수정해주세요)
 JWT_SECRET_KEY=@$_-Ts_board_!JWT!_secret*-&key+
 
-# 이메일 발송에 사용할 주소 지정
-EMAIL_ACCOUNT=sampleadminemailaddr@tsboard.dev
-EMAIL_PASS=pleaseupdatethispassword
+# GMAIL OAUTH
+# 참고) https://iamiet.tistory.com/entry/Nodemailer-Gmail-OAuth20%EC%9C%BC%EB%A1%9C-%EC%9D%B4%EB%A9%94%EC%9D%BC-%EB%B0%9C%EC%86%A1%EA%B8%B0%EB%8A%A5-%EA%B5%AC%ED%98%84%ED%95%98%EA%B8%B0
+GMAIL_OAUTH_USER= # Oauth Client에서 테스트 사용자로 등록된 이메일 주소
+GMAIL_OAUTH_CLIENT_ID= # OAuth Client의 아이디
+GAMIL_OAUTH_CLIENT_SECRET= # OAuth Client의 보안 비밀번호
+GAMIL_OAUTH_REFRESH_TOKEN= # playground에서 발급받은 리프레쉬 토큰
