--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "vite --host",
-    "dev:server": "bun run --watch src/server/index.ts",
+    "dev:server": "bun run --watch server/index.ts",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "test": "jest",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
@@ -30,10 +31,12 @@
     "elysia": "^0.7.29",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
     "sharp": "^0.32.6",
+    "test": "^3.3.0",
     "vue": "^3.3.8",
     "vue-router": "^4.0.0",
     "vuetify": "^3.4.0"
@@ -41,7 +44,8 @@
   "devDependencies": {
     "@babel/types": "^7.21.4",
     "@types/crypto-js": "^4.1.3",
-    "@types/node": "^20.8.0",
+    "@types/node": "^20.10.4",
+    "@types/nodemailer": "^6.4.14",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.37.0",
