--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/pm": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
     "@tiptap/vue-3": "^2.1.11",
+    "chalk": "^5.3.0",
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
     "elysia": "^0.7.30",
