--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
+    "@types/bun": "^1.0.4",
     "@types/crypto-js": "^4.1.3",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
