--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
     "elysia": "^0.8.6",
+    "elysia-ip": "^0.0.7",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "mysql2": "^3.6.5",
