--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^6.9.8",
     "pinia": "^2.0.0",
     "roboto-fontface": "*",
+    "sanitize-html": "^2.11.0",
     "sharp": "^0.32.6",
     "test": "^3.3.0",
     "vue": "^3.3.8",
@@ -52,6 +53,7 @@
     "@types/crypto-js": "^4.1.3",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/sanitize-html": "^2.11.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.37.0",
