--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --host",
     "dev:server": "bun run --watch server/index.ts",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build --base=/",
     "preview": "vite preview",
     "test": "jest",
     "lint": "eslint . --fix --ignore-path .gitignore"
