--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-highlight": "^2.1.11",
     "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/extension-link": "^2.3.1",
     "@tiptap/extension-table": "^2.1.12",
     "@tiptap/extension-table-cell": "^2.1.12",
     "@tiptap/extension-table-header": "^2.1.12",
@@ -32,6 +33,7 @@
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
     "elysia": "^0.8.17",
+    "exifr": "^7.1.3",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "mysql2": "^3.9.2",
