--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql2": "^3.9.2",
     "nanoid": "^5.0.6",
     "nodemailer": "^6.9.12",
+    "openai": "^4.47.1",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "sanitize-html": "^2.12.1",
