tiptap 2.4.0 업데이트 및 글작성 시 커서 이동 문제 해결

--- a/package.json
+++ b/package.json
@@ -15,20 +15,37 @@
     "@elysiajs/eden": "^0.7.7",
     "@elysiajs/jwt": "^0.8.0",
     "@mdi/font": "7.0.96",
-    "@tiptap/extension-code-block-lowlight": "^2.1.12",
-    "@tiptap/extension-color": "^2.1.11",
-    "@tiptap/extension-highlight": "^2.1.11",
-    "@tiptap/extension-image": "^2.1.11",
-    "@tiptap/extension-link": "^2.3.1",
-    "@tiptap/extension-table": "^2.1.12",
-    "@tiptap/extension-table-cell": "^2.1.12",
-    "@tiptap/extension-table-header": "^2.1.12",
-    "@tiptap/extension-table-row": "^2.1.12",
-    "@tiptap/extension-text-style": "^2.1.11",
-    "@tiptap/extension-youtube": "^2.1.12",
-    "@tiptap/pm": "^2.1.11",
-    "@tiptap/starter-kit": "^2.1.11",
-    "@tiptap/vue-3": "^2.1.11",
+    "@tiptap/extension-blockquote": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-code": "^2.4.0",
+    "@tiptap/extension-code-block-lowlight": "^2.4.0",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-dropcursor": "^2.4.0",
+    "@tiptap/extension-gapcursor": "^2.4.0",
+    "@tiptap/extension-hard-break": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-history": "^2.4.0",
+    "@tiptap/extension-horizontal-rule": "^2.4.0",
+    "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-table": "^2.4.0",
+    "@tiptap/extension-table-cell": "^2.4.0",
+    "@tiptap/extension-table-header": "^2.4.0",
+    "@tiptap/extension-table-row": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/extension-typography": "^2.4.0",
+    "@tiptap/extension-youtube": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/vue-3": "^2.4.0",
     "chalk": "^5.3.0",
     "core-js": "^3.29.0",
     "crypto-js": "^4.2.0",
