--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@elysiajs/cors": "^0.8.0",
-    "@elysiajs/eden": "^0.7.7",
-    "@elysiajs/jwt": "^0.8.0",
-    "@mdi/font": "7.0.96",
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/eden": "^1.0.14",
+    "@elysiajs/jwt": "^1.0.2",
+    "@elysiajs/static": "^1.0.3",
+    "@mdi/font": "7.4.47",
     "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-bullet-list": "^2.4.0",
@@ -47,44 +48,44 @@
     "@tiptap/pm": "^2.4.0",
     "@tiptap/vue-3": "^2.4.0",
     "chalk": "^5.3.0",
-    "core-js": "^3.29.0",
+    "core-js": "^3.37.1",
     "crypto-js": "^4.2.0",
-    "elysia": "^0.8.17",
+    "elysia": "^1.0.22",
     "exifr": "^7.1.3",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
-    "mysql2": "^3.9.2",
-    "nanoid": "^5.0.6",
-    "nodemailer": "^6.9.12",
-    "openai": "^4.47.1",
+    "mysql2": "^3.9.8",
+    "nanoid": "^5.0.7",
+    "nodemailer": "^6.9.13",
+    "openai": "^4.47.2",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
-    "sanitize-html": "^2.12.1",
-    "sharp": "^0.32.6",
+    "sanitize-html": "^2.13.0",
+    "sharp": "^0.33.4",
     "test": "^3.3.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vuetify": "^3.6.3"
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2",
+    "vuetify": "^3.6.7"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.4",
-    "@types/bun": "^1.0.8",
-    "@types/crypto-js": "^4.1.3",
-    "@types/node": "^20.11.25",
-    "@types/nodemailer": "^6.4.14",
+    "@babel/types": "^7.24.6",
+    "@types/bun": "^1.1.3",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/sanitize-html": "^2.11.0",
     "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.57.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.22.0",
+    "eslint-plugin-vue": "^9.26.0",
     "prettier": "^3.2.5",
-    "sass": "^1.60.0",
-    "typescript": "^5.4.2",
-    "unplugin-fonts": "^1.0.3",
-    "vite": "^4.5.2",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.8.27"
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
+    "unplugin-fonts": "^1.1.1",
+    "vite": "^5.2.12",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-tsc": "^2.0.19"
   },
   "module": "src/index.js"
 }
