--- a/package.json
+++ b/package.json
@@ -12,60 +12,61 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
-    "@elysiajs/eden": "^1.1.0",
+    "@elysiajs/eden": "^1.1.2",
     "@elysiajs/jwt": "^1.1.0",
     "@elysiajs/static": "^1.1.0",
     "@mdi/font": "7.4.47",
-    "@tiptap/extension-blockquote": "^2.5.4",
-    "@tiptap/extension-bold": "^2.5.4",
-    "@tiptap/extension-bullet-list": "^2.5.4",
-    "@tiptap/extension-code": "^2.5.4",
-    "@tiptap/extension-code-block-lowlight": "^2.5.4",
-    "@tiptap/extension-color": "^2.5.4",
-    "@tiptap/extension-document": "^2.5.4",
-    "@tiptap/extension-dropcursor": "^2.5.4",
-    "@tiptap/extension-gapcursor": "^2.5.4",
-    "@tiptap/extension-hard-break": "^2.5.4",
-    "@tiptap/extension-heading": "^2.5.4",
+    "@tiptap/extension-blockquote": "^2.6.4",
+    "@tiptap/extension-bold": "^2.6.4",
+    "@tiptap/extension-bullet-list": "^2.6.4",
+    "@tiptap/extension-code": "^2.6.4",
+    "@tiptap/extension-code-block-lowlight": "^2.6.4",
+    "@tiptap/extension-color": "^2.6.4",
+    "@tiptap/extension-document": "^2.6.4",
+    "@tiptap/extension-dropcursor": "^2.6.4",
+    "@tiptap/extension-gapcursor": "^2.6.4",
+    "@tiptap/extension-hard-break": "^2.6.4",
+    "@tiptap/extension-heading": "^2.6.4",
     "@tiptap/extension-highlight": "^2.4.0",
-    "@tiptap/extension-history": "^2.5.4",
-    "@tiptap/extension-horizontal-rule": "^2.5.4",
-    "@tiptap/extension-image": "^2.5.4",
-    "@tiptap/extension-italic": "^2.5.4",
-    "@tiptap/extension-link": "^2.5.4",
-    "@tiptap/extension-list-item": "^2.5.4",
-    "@tiptap/extension-ordered-list": "^2.5.4",
-    "@tiptap/extension-paragraph": "^2.5.4",
-    "@tiptap/extension-strike": "^2.5.4",
-    "@tiptap/extension-table": "^2.5.4",
-    "@tiptap/extension-table-cell": "^2.5.4",
-    "@tiptap/extension-table-header": "^2.5.4",
-    "@tiptap/extension-table-row": "^2.5.4",
-    "@tiptap/extension-text": "^2.5.4",
-    "@tiptap/extension-text-style": "^2.5.4",
-    "@tiptap/extension-typography": "^2.5.4",
-    "@tiptap/extension-youtube": "^2.5.4",
-    "@tiptap/pm": "^2.5.4",
-    "@tiptap/vue-3": "^2.5.4",
+    "@tiptap/extension-history": "^2.6.4",
+    "@tiptap/extension-horizontal-rule": "^2.6.4",
+    "@tiptap/extension-image": "^2.6.4",
+    "@tiptap/extension-italic": "^2.6.4",
+    "@tiptap/extension-link": "^2.6.4",
+    "@tiptap/extension-list-item": "^2.6.4",
+    "@tiptap/extension-ordered-list": "^2.6.4",
+    "@tiptap/extension-paragraph": "^2.6.4",
+    "@tiptap/extension-strike": "^2.6.4",
+    "@tiptap/extension-table": "^2.6.4",
+    "@tiptap/extension-table-cell": "^2.6.4",
+    "@tiptap/extension-table-header": "^2.6.4",
+    "@tiptap/extension-table-row": "^2.6.4",
+    "@tiptap/extension-text": "^2.6.4",
+    "@tiptap/extension-text-style": "^2.6.4",
+    "@tiptap/extension-typography": "^2.6.4",
+    "@tiptap/extension-youtube": "^2.6.4",
+    "@tiptap/pm": "^2.6.4",
+    "@tiptap/vue-3": "^2.6.4",
+    "@vue/language-core": "^2.0.29",
     "chalk": "^5.3.0",
-    "core-js": "^3.37.1",
+    "core-js": "^3.38.0",
     "crypto-js": "^4.2.0",
-    "elysia": "^1.1.2",
+    "elysia": "^1.1.6",
     "exifr": "^7.1.3",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
-    "mysql2": "^3.10.3",
+    "mysql2": "^3.11.0",
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.14",
-    "openai": "^4.53.0",
-    "pinia": "^2.1.7",
+    "openai": "^4.56.0",
+    "pinia": "^2.2.2",
     "roboto-fontface": "*",
     "sanitize-html": "^2.13.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "test": "^3.3.0",
-    "vue": "^3.4.32",
-    "vue-router": "^4.4.0",
-    "vuetify": "^3.6.13"
+    "vue": "^3.4.38",
+    "vue-router": "^4.4.3",
+    "vuetify": "^3.7.0"
   },
   "devDependencies": {
     "@babel/types": "^7.24.6",
@@ -85,7 +86,7 @@
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.2.12",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^2.0.29"
   },
   "module": "src/index.js"
 }
