--- a/package.json
+++ b/package.json
@@ -11,82 +11,82 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@elysiajs/cors": "^1.1.0",
-    "@elysiajs/eden": "^1.1.2",
-    "@elysiajs/jwt": "^1.1.0",
-    "@elysiajs/static": "^1.1.0",
+    "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/eden": "^1.1.3",
+    "@elysiajs/jwt": "^1.1.1",
+    "@elysiajs/static": "^1.1.1",
     "@mdi/font": "7.4.47",
     "@tiptap/extension-blockquote": "^2.8.0",
-    "@tiptap/extension-bold": "^2.6.4",
-    "@tiptap/extension-bullet-list": "^2.6.4",
-    "@tiptap/extension-code": "^2.6.4",
-    "@tiptap/extension-code-block-lowlight": "^2.6.4",
-    "@tiptap/extension-color": "^2.6.4",
-    "@tiptap/extension-document": "^2.6.4",
-    "@tiptap/extension-dropcursor": "^2.6.4",
-    "@tiptap/extension-gapcursor": "^2.6.4",
-    "@tiptap/extension-hard-break": "^2.6.4",
-    "@tiptap/extension-heading": "^2.6.4",
-    "@tiptap/extension-highlight": "^2.4.0",
-    "@tiptap/extension-history": "^2.6.4",
-    "@tiptap/extension-horizontal-rule": "^2.6.4",
-    "@tiptap/extension-image": "^2.6.4",
-    "@tiptap/extension-italic": "^2.6.4",
-    "@tiptap/extension-link": "^2.6.4",
-    "@tiptap/extension-list-item": "^2.6.4",
-    "@tiptap/extension-ordered-list": "^2.6.4",
-    "@tiptap/extension-paragraph": "^2.6.4",
-    "@tiptap/extension-strike": "^2.6.4",
-    "@tiptap/extension-table": "^2.6.4",
-    "@tiptap/extension-table-cell": "^2.6.4",
-    "@tiptap/extension-table-header": "^2.6.4",
-    "@tiptap/extension-table-row": "^2.6.4",
-    "@tiptap/extension-text": "^2.6.4",
-    "@tiptap/extension-text-style": "^2.6.4",
-    "@tiptap/extension-typography": "^2.6.4",
-    "@tiptap/extension-youtube": "^2.6.4",
-    "@tiptap/pm": "^2.6.4",
-    "@tiptap/vue-3": "^2.6.4",
-    "@vue/language-core": "^2.0.29",
+    "@tiptap/extension-bold": "^2.8.0",
+    "@tiptap/extension-bullet-list": "^2.8.0",
+    "@tiptap/extension-code": "^2.8.0",
+    "@tiptap/extension-code-block-lowlight": "^2.8.0",
+    "@tiptap/extension-color": "^2.8.0",
+    "@tiptap/extension-document": "^2.8.0",
+    "@tiptap/extension-dropcursor": "^2.8.0",
+    "@tiptap/extension-gapcursor": "^2.8.0",
+    "@tiptap/extension-hard-break": "^2.8.0",
+    "@tiptap/extension-heading": "^2.8.0",
+    "@tiptap/extension-highlight": "^2.8.0",
+    "@tiptap/extension-history": "^2.8.0",
+    "@tiptap/extension-horizontal-rule": "^2.8.0",
+    "@tiptap/extension-image": "^2.8.0",
+    "@tiptap/extension-italic": "^2.8.0",
+    "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/extension-list-item": "^2.8.0",
+    "@tiptap/extension-ordered-list": "^2.8.0",
+    "@tiptap/extension-paragraph": "^2.8.0",
+    "@tiptap/extension-strike": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/extension-table-cell": "^2.8.0",
+    "@tiptap/extension-table-header": "^2.8.0",
+    "@tiptap/extension-table-row": "^2.8.0",
+    "@tiptap/extension-text": "^2.8.0",
+    "@tiptap/extension-text-style": "^2.8.0",
+    "@tiptap/extension-typography": "^2.8.0",
+    "@tiptap/extension-youtube": "^2.8.0",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/vue-3": "^2.8.0",
+    "@vue/language-core": "^2.1.6",
     "chalk": "^5.3.0",
-    "core-js": "^3.38.0",
+    "core-js": "^3.38.1",
     "crypto-js": "^4.2.0",
-    "elysia": "^1.1.6",
+    "elysia": "^1.1.19",
     "exifr": "^7.1.3",
     "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.3",
     "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.14",
-    "openai": "^4.56.0",
-    "pinia": "^2.2.2",
-    "roboto-fontface": "*",
-    "sanitize-html": "^2.13.0",
+    "nodemailer": "^6.9.15",
+    "openai": "^4.67.3",
+    "pinia": "^2.2.4",
+    "roboto-fontface": "^0.10.0",
+    "sanitize-html": "^2.13.1",
     "sharp": "^0.33.5",
     "test": "^3.3.0",
-    "vue": "^3.4.38",
-    "vue-router": "^4.4.3",
-    "vuetify": "^3.7.0"
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/types": "^7.24.6",
-    "@types/bun": "^1.1.3",
+    "@babel/types": "^7.25.7",
+    "@types/bun": "^1.1.11",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20.12.12",
-    "@types/nodemailer": "^6.4.15",
-    "@types/sanitize-html": "^2.11.0",
+    "@types/node": "^20.16.11",
+    "@types/nodemailer": "^6.4.16",
+    "@types/sanitize-html": "^2.13.0",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
-    "typescript": "^5.4.5",
+    "eslint-plugin-vue": "^9.28.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.79.4",
+    "typescript": "^5.6.3",
     "unplugin-fonts": "^1.1.1",
-    "vite": "^5.2.12",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vue-tsc": "^2.0.29"
+    "vite": "^5.4.8",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-tsc": "^2.1.6"
   },
   "module": "src/index.js"
 }
