--- a/env.sample
+++ b/env.sample
@@ -1,9 +1,9 @@
 #
-# TSBOARD 서버쪽 설정 파일 (샘플)
+# TSBOARD 서버쪽 설정 파일
 #
 
 # 백엔드 서버
-GOAPI_VERSION=1.0.0-beta1
+GOAPI_VERSION=1.0.0-beta
 GOAPI_PORT=3003
 GOAPI_URL=https://tsboard.dev
 GOAPI_TITLE=TSBOARD
@@ -15,21 +15,21 @@ GOAPI_FULL_SIZE=2400
 GOAPI_FILE_SIZE_LIMIT=104857600
 
 # 데이터베이스 세팅 (DB_UNIX_SOCKET 경로를 모를 경우 공란 유지)
-DB_HOST=localhost
-DB_USER=your_db_username
-DB_PASS=your_db_password
-DB_NAME=tsboard
-DB_TABLE_PREFIX=tsb_
-DB_UNIX_SOCKET=/var/run/mysqld/mysqld.sock
-DB_MAX_IDLE=10
-DB_MAX_OPEN=10
+DB_HOST=#dbhost#
+DB_USER=#dbuser#
+DB_PASS=#dbpass#
+DB_NAME=#dbname#
+DB_TABLE_PREFIX=#dbprefix#
+DB_UNIX_SOCKET=#dbsock#
+DB_MAX_IDLE=#dbmaxidle#
+DB_MAX_OPEN=#dbmaxopen#
 
 # JWT 설정
-JWT_SECRET_KEY=pLeASe_cHAngE_ThIs_RamDomlY
+JWT_SECRET_KEY=#jwtsecret#
 
 # 관리자 아이디(이메일) 및 비밀번호
-ADMIN_ID=your_login_id@iamadmin.com
-ADMIN_PW=your_login_pw
+ADMIN_ID=#adminid#
+ADMIN_PW=#adminpw#
 
 # 구글 앱비밀번호 for GMAIL 발송
 # 참고) https://velog.io/@seul06/nodemailer
