--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "tsboard",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite --host",
-    "dev:server": "bun run --watch server/index.ts",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "jest",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@elysiajs/cors": "^1.1.1",
-    "@elysiajs/eden": "^1.1.3",
-    "@elysiajs/jwt": "^1.1.1",
-    "@elysiajs/static": "^1.1.1",
     "@mdi/font": "7.4.47",
     "@tiptap/extension-blockquote": "^2.10.3",
     "@tiptap/extension-bold": "^2.10.3",
@@ -48,22 +43,13 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/vue-3": "^2.10.3",
     "@vue/language-core": "^2.1.10",
-    "alova": "^3.2.7",
-    "chalk": "^5.3.0",
+    "axios": "^1.7.9",
     "core-js": "^3.38.1",
     "crypto-js": "^4.2.0",
-    "elysia": "^1.1.26",
-    "exifr": "^7.1.3",
     "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
-    "mysql2": "^3.11.5",
-    "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.15",
-    "openai": "^4.76.0",
     "pinia": "^2.3.0",
     "roboto-fontface": "^0.10.0",
-    "sanitize-html": "^2.13.1",
-    "sharp": "^0.33.5",
     "test": "^3.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -71,11 +57,8 @@
   },
   "devDependencies": {
     "@babel/types": "^7.25.7",
-    "@types/bun": "^1.1.11",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.16.11",
-    "@types/nodemailer": "^6.4.16",
-    "@types/sanitize-html": "^2.13.0",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-typescript": "^13.0.0",
     "eslint": "^8.57.1",
