--- a/env.sample
+++ b/env.sample
@@ -3,7 +3,7 @@
 #
 
 # 백엔드 서버
-GOAPI_VERSION=1.0.1
+GOAPI_VERSION=1.0.2
 GOAPI_PORT=3003
 GOAPI_URL=https://tsboard.dev
 GOAPI_URL_PREFIX=
@@ -27,6 +27,8 @@ DB_MAX_OPEN=#dbmaxopen#
 
 # JWT 설정
 JWT_SECRET_KEY=#jwtsecret#
+JWT_ACCESS_HOURS=2
+JWT_REFRESH_DAYS=30
 
 # 관리자 아이디(이메일) 및 비밀번호
 ADMIN_ID=#adminid#
